--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Bootstrap Javascript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 
-    <title>Bootstrap Base Template</title>
+    <title>PRJ4 Guide</title>
   </head>
   <body>
 
@@ -61,13 +61,15 @@
 
     <main class="container-fluid">
 
-      <section id="start" class="py-5">
-        <h1 class="display-1 lh-1 fw-bold text-center m-5">Welcome to the PRJ4 Guide!</h1>
-        <ul class="d-flex justify-content-evenly flex-wrap list-unstyled">
-          <li>
-            <a class="btn btn-primary fs-3 m-2" href="part-1.html">Part 1: Publishing your first page</a>
-          </li>
-        </ul>
+      <section id="start" class="py-5 bg-hero row justify-content-center">
+        <div class="col-12 col-lg-11 col-xxl-10">
+          <h1 class="display-1 lh-1 fw-bold text-center m-5">Welcome to the PRJ4 Guide!</h1>
+          <ul class="d-flex justify-content-evenly flex-wrap list-unstyled">
+            <li>
+              <a class="btn btn-primary fs-3 m-2" href="part-1.html">Part 1: Publishing your first page</a>
+            </li>
+          </ul>
+        </div>
       </section>
 
 
