Edited home page and nav

--- a/index.html
+++ b/index.html
@@ -16,62 +16,161 @@
   </head>
   <body>
 
-    <nav id="main-nav" class="bg-secondary sticky-top p-1 justify-content-start">
+    <nav id="main-nav" class="bg-secondary bg-gradient sticky-top p-1 justify-content-start">
       <ul class="nav nav-pills align-items-center">
         <li class="nav-item fs-4">
-          <a class="nav-link text-light active" href="">
+          <a class="nav-link text-light p-1 p-sm-2 active bg-gradient" href="">
             PRJ4
             <span class="d-none d-sm-inline">Guide</span>
           </a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-light" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Part 1</a>
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            Part 1
+          </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="part-1.html">Publishing your first page</a>
+              <a class="dropdown-item" href="part-1.html#part_1">Publish your first page</a>
             </li>
             <li>
               <hr class="dropdown-divider">
             </li>
             <li>
-              <a class="dropdown-item" href="part-1.html#overview_goals">Overview & goals</a>
+              <a class="dropdown-item" href="part-1.html#overview_goals"><span class="badge rounded-pill bg-buas">1.1</span> Overview & goals</a>
             </li>
             <li>
-              <a class="dropdown-item" href="part-1.html#what_is_a_webpage">What is a web page?</a>
+              <a class="dropdown-item" href="part-1.html#what_is_a_webpage"><span class="badge rounded-pill bg-buas">1.2</span> What is a web page?</a>
             </li>
             <li>
-              <a class="dropdown-item" href="part-1.html#cybersecurity">Cybersecurity and privacy</a>
+              <a class="dropdown-item" href="part-1.html#cybersecurity"><span class="badge rounded-pill bg-buas">1.3</span> Cybersecurity and privacy</a>
             </li>
             <li>
-              <a class="dropdown-item" href="part-1.html#basic_html">The basic structure of HTML</a>
+              <a class="dropdown-item" href="part-1.html#setting_up_tools"><span class="badge rounded-pill bg-buas">1.4</span> Setting up the tools</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-1.html#basic_html"><span class="badge rounded-pill bg-buas">1.5</span> The basic structure of HTML</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-1.html#editing_publishing"><span class="badge rounded-pill bg-buas">1.6</span> Editing and publishing</a>
             </li>
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">Part 2</a>
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            Part 2
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="#">Edit the content of your page</a>
+            </li>
+          </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">Part 3</a>
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            Part 3
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="#">Add style to your page</a>
+            </li>
+          </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">Part 4</a>
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            Part 4
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="#">Towards your group website</a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            <img class="me-1" src="images/common/clipboard-check.svg" width="15" alt="Checklists">
+            <span class="d-none d-md-inline">Checklists</span>
+          </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="#">Individual Assignment</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#">Group Assignment</a>
+            </li>
+          </ul>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link text-light d-flex align-items-center px-2 px-md-3" href="https://web.microsoftstream.com/channel/987d2668-18d7-4d84-9342-4774e7d0ba94" target="_blank">
+            <img class="me-1" src="images/common/film.svg" width="15" alt="Videos">
+            <span class="d-none d-md-inline">Videos</span>
+          </a>
         </li>
       </ul>
     </nav>
 
     <main class="container-fluid">
 
-      <section id="start" class="py-5 bg-hero row justify-content-center">
+      <section id="part_1" class="py-5 bg-hero row justify-content-center">
         <div class="col-12 col-lg-11 col-xxl-10">
-          <h1 class="display-1 lh-1 fw-bold text-center m-5">Welcome to the PRJ4 Guide!</h1>
+          <h1 class="display-1 lh-1 text-center m-5 text-light">Welcome to the PRJ4 Production Guide</h1>
           <ul class="d-flex justify-content-evenly flex-wrap list-unstyled">
             <li>
-              <a class="btn btn-primary fs-3 m-2" href="part-1.html">Part 1: Publishing your first page</a>
+              <a class="btn btn-danger fs-4 m-2" href="part-1.html"><span class="badge text-danger rounded-pill bg-white">Part 1</span> Publish your first page</a>
             </li>
           </ul>
         </div>
       </section>
 
+      <section id="p_1">
+        <header class="section-header justify-content-center text-light bg-gradient py-5 row">
+          <div class="col-xxl-10">
+            <h2 class="display-3 fw-bolder lh-1 mb-4">
+              
+                <a href="part-1.html" class="badge rounded-pill bg-buas text-decoration-none">Part 1</a>
+                <a href="part-1.html" class="text-light">Publish your first page</a>
+              
+            </h2>
+          </div>
+        </header>
+        <article class="row justify-content-center">
+          <div class="col-md-6 col-xxl-5 py-3">
+            <h3 class="color-buas text-center">Objectives</h3>
+            <h5>
+              <img class="me-1" src="images/common/trophy.svg" width="16" alt="trophy icon">
+              At the end of this part, you will be able to:
+            </h5>
+            <ul>
+              <li>Know the basics of HTML and how it works within the client-server model.</li>
+              <li>Set up the tools you will use for the rest of the course.</li>
+              <li>Edit your first web page with Dreamweaver.</li>
+              <li>Publish this web page with GitHub.</li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-xxl-5 py-3 bg-lightblue">
+            <h3 class="color-blue text-center">Contents</h3>
+            <ol>
+              <li>
+                <a href="part-1.html#overview_goals">Overview & goals</a>
+              </li>
+              <li>
+                <a href="part-1.html#what_is_a_webpage">What is a web page?</a>
+              </li>
+              <li>
+                <a href="part-1.html#cybersecurity">Cybersecurity and privacy</a>
+              </li>
+              <li>
+                <a href="part-1.html#setting_up_tools">Setting up the tools</a>
+              </li>
+              <li>
+                <a href="part-1.html#basic_html">The basic structure of HTML</a>
+              </li>
+              <li>
+                <a href="part-1.html#editing_publishing">Editing and publishing</a>
+              </li>
+            </ol>
+          </div>
+        </article>
+      </section>
 
     </main>
   </body>
