--- a/part-1.html
+++ b/part-1.html
@@ -14,25 +14,25 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
 
-    <title>PRJ4 Guide | Part 1: Publishing your first page</title>
+    <title>PRJ4 Guide | Part 1: Publish your first page</title>
   </head>
   <body class="d-flex flex-column h-100">
 
-    <nav id="main-nav" class="bg-secondary p-1 justify-content-start">
+    <nav id="main-nav" class="bg-secondary bg-gradient p-1 justify-content-start">
       <ul class="nav nav-pills align-items-center">
         <li class="nav-item fs-4">
-          <a class="nav-link text-light" href="index.html">
+          <a class="nav-link text-light p-1 p-sm-2" href="index.html">
             PRJ4
             <span class="d-none d-md-inline">Guide</span>
           </a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-light active" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3 active bg-gradient" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
             Part 1
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="#part_1">Publishing your first page</a>
+              <a class="dropdown-item" href="#part_1">Publish your first page</a>
             </li>
             <li>
               <hr class="dropdown-divider">
@@ -58,26 +58,39 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">
-            <span class="d-none d-sm-inline">Part</span>
-            2
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            Part 2
           </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="#">Edit the content of your page</a>
+            </li>
+          </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">
-            <span class="d-none d-sm-inline">Part</span>
-            3
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            Part 3
           </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="#">Add style to your page</a>
+            </li>
+          </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-light" href="#">
-            <span class="d-none d-sm-inline">Part</span>
-            4
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            Part 4
           </a>
+          <ul class="dropdown-menu">
+            <li>
+              <a class="dropdown-item" href="#">Towards your group website</a>
+            </li>
+          </ul>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle text-light" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
-            Checklists
+          <a class="nav-link dropdown-toggle text-light d-flex align-items-center px-2 px-md-3" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">
+            <img class="me-1" src="images/common/clipboard-check.svg" width="15" alt="Checklists">
+            <span class="d-none d-md-inline">Checklists</span>
           </a>
           <ul class="dropdown-menu">
             <li>
@@ -88,6 +101,12 @@
             </li>
           </ul>
         </li>
+        <li class="nav-item">
+          <a class="nav-link text-light d-flex align-items-center px-2 px-md-3" href="https://web.microsoftstream.com/channel/987d2668-18d7-4d84-9342-4774e7d0ba94" target="_blank">
+            <img class="me-1" src="images/common/film.svg" width="15" alt="Videos">
+            <span class="d-none d-md-inline">Videos</span>
+          </a>
+        </li>
       </ul>
     </nav>
 
@@ -95,7 +114,7 @@
 
       <section id="part_1" class="py-5 bg-hero row justify-content-center">
         <div class="col-12 col-lg-11 col-xxl-10">
-          <h1 class="display-2 lh-1 fw-bold text-center m-5 text-light">Part 1: Publishing your first page</h1>
+          <h1 class="display-1 lh-1 text-center m-5 text-light">Part 1: Publish your first page</h1>
           <ul class="d-flex justify-content-evenly flex-wrap list-unstyled">
             <li>
               <a class="btn btn-danger fs-4 m-2" href="#overview_goals"><span class="badge text-danger rounded-pill bg-white">1.1</span> Overview & goals</a>
@@ -185,7 +204,7 @@
           <div class="col-md-6">
             <h5>
               <img class="me-1" src="images/common/film.svg" width="16" alt="film icon">
-              <a class="link-light" href="https://web.microsoftstream.com/" target="_blank">Watch on Microsoft Stream</a>
+              <a class="link-light" href="https://web.microsoftstream.com/video/fe13c344-6cb0-4704-bc07-3d4da8d2a3d2" target="_blank">Watch on Microsoft Stream</a>
             </h5>
             <ul>
               <li>A web page is a document written in the HTML programming language.</li>
@@ -632,7 +651,7 @@
           <div class="col-md-6">
             <h5>
               <img class="me-1" src="images/common/film.svg" width="16" alt="film icon">
-              <a class="link-light" href="https://web.microsoftstream.com/" target="_blank">Watch on Microsoft Stream</a>
+              <a class="link-light" href="https://web.microsoftstream.com/video/9120cc9f-71fa-4b37-976b-783c0bef6888" target="_blank">Watch on Microsoft Stream</a>
             </h5>
             <ul>
               <li>HTML uses a specific syntax to define the structure of elements in a page.</li>
