Fixed validator errors

--- a/part-1.html
+++ b/part-1.html
@@ -500,7 +500,7 @@
               <figure class="col-6">
                 <div class="p-2 border border-dark bg-white font-monospace">
                   <span class="text-info">&lt;</span><span class="text-danger">p</span><span class="text-info">&gt;</span>Hello, world!<span class="text-info">&lt;/</span><span class="text-danger">p</span><span class="text-info">&gt;</span><br>
-                  <span class="text-info">&lt;</span><span class="text-danger">img</span> <span class="text-primary">src<span class="text-info">="</span><span class="text-success">logo-buas.svg</span><span class="text-info">"</span> <span class="text-primary">alt</span><span class="text-info">="</span><span class="text-success">Our logo</span><span class="text-info">"&gt;</span>
+                  <span class="text-info">&lt;</span><span class="text-danger">img</span> <span class="text-primary">src</span><span class="text-info">="</span><span class="text-success">logo-buas.svg</span><span class="text-info">"</span> <span class="text-primary">alt</span><span class="text-info">="</span><span class="text-success">Our logo</span><span class="text-info">"&gt;</span>
                 </div>
                 <figcaption class="fst-italic text-center">What your code looks like in an advanced text editor (e.g. SublimeText or Dreamweaver)</figcaption>
               </figure>
@@ -579,8 +579,8 @@
                   </tbody>
                 </table>
               </div>
+              <figcaption class="col-12 fst-italic text-center">An example showing two versions and changes between versions, line per line.</figcaption>
             </figure>
-            <figcaption class="fst-italic text-center">An example showing two versions and changes between versions, line per line.</figcaption>
           </div>
           <div class="col-md-6 col-xxl-5 py-3">
             <h3 class="color-blue text-center">What is GitHub?</h3>
