--- a/part-1.html
+++ b/part-1.html
@@ -47,13 +47,13 @@
               <a class="dropdown-item" href="#cybersecurity"><span class="badge rounded-pill bg-buas">1.3</span> Cybersecurity and privacy</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#setting_up_tools"><span class="badge rounded-pill bg-buas">1.4</span> Setting up the tools</a>
+              <a class="dropdown-item" href="#setting_up_tools"><span class="badge rounded-pill bg-buas">1.4</span> Set up the tools</a>
             </li>
             <li>
               <a class="dropdown-item" href="#basic_html"><span class="badge rounded-pill bg-buas">1.5</span> The basic structure of HTML</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#editing_publishing"><span class="badge rounded-pill bg-buas">1.6</span> Editing and publishing</a>
+              <a class="dropdown-item" href="#editing_publishing"><span class="badge rounded-pill bg-buas">1.6</span> Edit and publish</a>
             </li>
           </ul>
         </li>
@@ -469,7 +469,7 @@
             <h2 class="bg-buas rounded-pill display-6 fw-bold py-1 px-2 d-inline-block">1.4</h2>
           </div>
           <div class="col-10 col-md-5">
-            <h2 class="display-3 fw-bolder lh-1 mb-4">Setting up the tools</h2>
+            <h2 class="display-3 fw-bolder lh-1 mb-4">Set up the tools</h2>
           </div>
           <div class="col-md-6">
             <h5>
@@ -635,7 +635,7 @@
         <footer class="row bg-gray">
           <div class="col-12 mt-3 mb-4 d-flex flex-wrap justify-content-evenly">
             <a class="btn btn-outline-secondary m-1" href="#part_1">↑ Back to the top of Part 1</a>
-            <a class="btn btn-outline-secondary m-1" href="#setting_up_tools">↑ Back to the top of &ldquo;Setting up the tools&rdquo;</a>
+            <a class="btn btn-outline-secondary m-1" href="#setting_up_tools">↑ Back to the top of &ldquo;Set up the tools&rdquo;</a>
           </div>
         </footer>
       </section>
@@ -1008,7 +1008,7 @@
             <h2 class="bg-buas rounded-pill display-6 fw-bold py-1 px-2 d-inline-block">1.6</h2>
           </div>
           <div class="col-10 col-md-5">
-            <h2 class="display-3 fw-bolder lh-1 mb-4">Editing & Publishing</h2>
+            <h2 class="display-3 fw-bolder lh-1 mb-4">Edit & Publish</h2>
           </div>
           <div class="col-md-6">
             <h5>
@@ -1051,7 +1051,7 @@
               <li class="my-2"><img class="me-1" src="images/part-1/dreamweaver.svg" width="30" alt="Dreamweaver">In Adobe Dreamweaver (or another HTML editor), change all references to &ldquo;Firstname Lastname&rdquo; by your own name</li>
               <li class="my-2"><img class="me-1" src="images/part-1/dreamweaver.svg" width="30" alt="Dreamweaver">Before going any further, save your files!</li>
               <li class="my-2"><img class="me-1" src="images/part-1/github-desktop.svg" width="30" alt="GitHub Desktop">In GitHub Desktop, <strong>commit</strong> your files by clicking on the &ldquo;Commmit to main&rdquo; button. You must provide a short description of your changes.</li>
-              <li class="my-2"><img class="me-1" src="images/part-1/github-desktop.svg" width="30" alt="GitHub Desktop">At this point, your changes are still only on your laptop. You now need to <strong>push</strong> your changes by clicking on the &ldquo;Sync&rdquo; button.</li>
+              <li class="my-2"><img class="me-1" src="images/part-1/github-desktop.svg" width="30" alt="GitHub Desktop">At this point, your changes are still only on your laptop. You now need to <strong>push</strong> your changes by clicking on the &ldquo;Push&rdquo; button.</li>
               <li class="my-2"><img class="me-1" src="images/part-1/chrome.svg" width="30" alt="Browser">Clicking on &ldquo;View on GitHub&rdquo; opens a browser window and lets you see what is online. Check that all your changes have been uploaded to the cloud.</li>
               <li class="my-2"><img class="me-1" src="images/part-1/chrome.svg" width="30" alt="Browser">Now your resumé should be ready to publish. Go to the repository&rsquo;s <strong>Settings</strong>, then to the <strong>Pages</strong> subsection. Choose the main branch as the source, then click on Save.</li>
               <li class="my-2"><img class="me-1" src="images/part-1/chrome.svg" width="30" alt="Browser">You should now see a green check mark (see below) and the URL for your website. Wait about 1 minute for the website to be fully published, then click on the link and visit your first published website!</li>
@@ -1077,7 +1077,7 @@
         <footer class="row bg-gray">
           <div class="col-12 mt-3 mb-4 d-flex flex-wrap justify-content-evenly">
             <a class="btn btn-outline-secondary m-1" href="#part_1">↑ Back to the top of Part 1</a>
-            <a class="btn btn-outline-secondary m-1" href="#editing_publishing">↑ Back to the top of &ldquo;Editing & Publishing&rdquo;</a>
+            <a class="btn btn-outline-secondary m-1" href="#editing_publishing">↑ Back to the top of &ldquo;Edit & Publish&rdquo;</a>
           </div>
         </footer>
       </section>
