--- a/part-3.html
+++ b/part-3.html
@@ -32,28 +32,28 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="#part_1">Publish your first page</a>
+              <a class="dropdown-item" href="part-1.html">Publish your first page</a>
             </li>
             <li>
               <hr class="dropdown-divider">
             </li>
             <li>
-              <a class="dropdown-item" href="#overview_goals"><span class="badge rounded-pill bg-buas">1.1</span> Overview & goals</a>
+              <a class="dropdown-item" href="part-1.html#overview_goals"><span class="badge rounded-pill bg-buas">1.1</span> Overview & goals</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#what_is_a_webpage"><span class="badge rounded-pill bg-buas">1.2</span> What is a web page?</a>
+              <a class="dropdown-item" href="part-1.html#what_is_a_webpage"><span class="badge rounded-pill bg-buas">1.2</span> What is a web page?</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#cybersecurity"><span class="badge rounded-pill bg-buas">1.3</span> Cybersecurity and privacy</a>
+              <a class="dropdown-item" href="part-1.html#cybersecurity"><span class="badge rounded-pill bg-buas">1.3</span> Cybersecurity and privacy</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#setting_up_tools"><span class="badge rounded-pill bg-buas">1.4</span> Set up the tools</a>
+              <a class="dropdown-item" href="part-1.html#setting_up_tools"><span class="badge rounded-pill bg-buas">1.4</span> Set up the tools</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#basic_html"><span class="badge rounded-pill bg-buas">1.5</span> The basic structure of HTML</a>
+              <a class="dropdown-item" href="part-1.html#basic_html"><span class="badge rounded-pill bg-buas">1.5</span> The basic structure of HTML</a>
             </li>
             <li>
-              <a class="dropdown-item" href="#editing_publishing"><span class="badge rounded-pill bg-buas">1.6</span> Edit and publish</a>
+              <a class="dropdown-item" href="part-1.html#editing_publishing"><span class="badge rounded-pill bg-buas">1.6</span> Edit and publish</a>
             </li>		  
           </ul>
         </li>
@@ -65,6 +65,27 @@
             <li>
               <a class="dropdown-item" href="#">Edit the content of your page</a>
             </li>
+			  <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#overview_goals"><span class="badge rounded-pill bg-buas">2.1</span> Overview & goals</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#html_tags"><span class="badge rounded-pill bg-buas">2.2</span> Common HTML Elements</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#dev_tools"><span class="badge rounded-pill bg-buas">2.3</span> Use developer tools</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#avoid_errors"><span class="badge rounded-pill bg-buas">2.4</span> Avoid coding errors</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#link"><span class="badge rounded-pill bg-buas">2.5</span> Link to images and pages</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#images"><span class="badge rounded-pill bg-buas">2.6</span> Manage images</a>
+            </li>		 
           </ul>
         </li>
         <li class="nav-item">
