Added folder and file structure

--- a/part-1.html
+++ b/part-1.html
@@ -1057,9 +1057,7 @@
               <li class="my-2"><img class="me-1" src="images/part-1/chrome.svg" width="30" alt="Browser">You should now see a green check mark (see below) and the URL for your website. Wait about 1 minute for the website to be fully published, then click on the link and visit your first published website!</li>
             </ol>
             <div class="alert alert-success my-3">
-              <svg height="16" viewBox="0 0 16 16" width="16">
-                <path fill="#008000" fill-rule="evenodd" d="M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z"></path>
-              </svg>
+              <img src="images/common/check.svg" alt="success">
               Your site is published at <a href="https://buas-media-interactive.github.io/prj4-cv/" target="_blank">https://buas-media-interactive.github.io/prj4-cv/</a>
             </div>
           </div>
