--- a/part-2.html
+++ b/part-2.html
@@ -71,6 +71,21 @@
             <li>
               <a class="dropdown-item" href="#overview_goals"><span class="badge rounded-pill bg-buas">2.1</span> Overview & goals</a>
             </li>
+            <li>
+              <a class="dropdown-item" href="#html_tags"><span class="badge rounded-pill bg-buas">2.2</span> Common HTML Elements</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#dev_tools"><span class="badge rounded-pill bg-buas">2.3</span> Use developer tools</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#avoid_errors"><span class="badge rounded-pill bg-buas">2.4</span> Avoid errors</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#link"><span class="badge rounded-pill bg-buas">2.5</span> Link to images and pages</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="#manage_images"><span class="badge rounded-pill bg-buas">2.6</span> Manage images</a>
+            </li>
           </ul>
         </li>
         <li class="nav-item">
@@ -138,7 +153,7 @@
               <a class="btn btn-danger fs-4 m-2" href="#link"><span class="badge text-danger rounded-pill bg-white">2.5</span> Link to images and pages</a>
             </li>
             <li>
-              <a class="btn btn-danger fs-4 m-2" href="#"><span class="badge text-danger rounded-pill bg-white">2.6</span> Manage images</a>
+              <a class="btn btn-danger fs-4 m-2" href="#manage_images"><span class="badge text-danger rounded-pill bg-white">2.6</span> Manage images</a>
             </li>
           </ul>
         </div>
@@ -940,7 +955,7 @@
             <p><strong class="text-primary">Use absolute URLs when:</strong> linking to an external resource (page or file).</p>
           </div>
           <div class="col-md-6 col-xxl-5 py-3 bg-lightorange">
-            <h3 class="text-center">Relative path</h4>
+            <h3 class="text-center">Relative path</h3>
             <p>A relative path is used when linking to a resource within the same web site. A relative link <u>does not include</u> the address of the web server.</p>
             <p>The full URL of the resource will be calculated based on the address of the page from which it is called.</p>
             <div class="p-2 border border-dark bg-white font-monospace">
@@ -1069,10 +1084,265 @@
       </section>
 
 
+      <section id="manage_images">
+        <header class="section-header row justify-content-center text-light bg-gradient py-5">
+          <div class="col-2 col-md-1 text-end">
+            <h2 class="bg-buas rounded-pill display-6 fw-bold py-1 px-2 d-inline-block">2.4</h2>
+          </div>
+          <div class="col-10 col-md-5">
+            <h2 class="display-3 fw-bolder lh-1 mb-4">Link to images and pages</h2>
+          </div>
+          <div class="col-md-6">
+            <h5>
+              <img class="me-1" src="images/common/film.svg" width="16" alt="film icon">
+              <a class="link-light" href="https://web.microsoftstream.com/" target="_blank">Watch on Microsoft Stream</a>
+            </h5>
+            <ul>
+              <li>Use images to grab the attention of your audience.</li>
+              <li>Choose the right format for your images.</li>
+              <li>Resize them and organize them properly.</li>
+            </ul>
+          </div>
+        </header>
+        <article class="row justify-content-center">
+          <div class="col-md-6 col-xxl-5 py-3">
+            <h3 class="text-center color-buas">Why use images?</h3>
+            <p>Our brains&rsquo; attention is attracted by visual content, in particular:</p>
+            <ul>
+              <li>Pictures of human and animal faces, especially when they&rsquo;re looking at you.</li>
+              <li>Bright colours and moving images.</li>
+              <li>Images displaying food, creating a sense of danger, or generating sexual arousal.</li>
+            </ul>
+            <p>Attracting one&rsquo;s attention is what you want to do with your audience, therefore images are essential for web design.</p>
+            <figure>
+              <img src="images/part-2/cat-from-the-web.jpg" alt="A photo of a cat" class="d-block mx-auto my-1 img-fluid">
+              <figcaption class="text-center fst-italic">
+                <a href="https://unsplash.com/@theluckyneko" target="_blank">This photo of a cat was taken by Millie Wollney and posted on Unsplash</a>
+              </figcaption>
+            </figure>
+          </div>
+          <div class="col-md-6 col-xxl-5 py-3 bg-lightblue">
+            <h3 class="text-center">Image size</h3>
+            <p>The words &ldquo;image size&rdquo; can mean two things:</p>
+            <ol>
+              <li>The <strong>pixel dimensions</strong>. For example, the original image of this cat was <strong>3000 pixels</strong> wide and <strong>3000 pixels</strong> high.</li>
+              <li>The <strong>file size</strong>. The same original file was <strong>1 megabyte</strong> (MB), which is equivalent, in terms of the space needed on your hard drive, to a text made of a million letters.</li>
+            </ol>
+            <p>Larger images mean a higher quality, but this is limited by how big the image will be displayed in a browser.</p>
+            <p>But larger images take longer to download and need more disk space to store, which has the following downsides:</p>
+            <ul>
+              <li>From the point of view of the website <strong>visitor</strong>:
+                <ul>
+                  <li>Pages and images take more time to load. On a typical 4G or cheap DSL subscription, the original image takes a fifth of a second to load, which starts to become noticeable. On a 3G connection, it will take more than a second and will feel very slow.</li>
+                  <li>If the website is browsed on a mobile phone, then this will use up some of the user&rsquo; <strong>data allowance</strong>. The cheapest mobile plans tend to have a 1 GB monthly limit, or in other words, 33 high-quality cat images a day.</li>
+                </ul>
+              </li>
+              <li>From the point of view of the <strong>owner</strong> of the website: hosting is generally charged based on how much disk space and network bandwidth you are using. Big images cost more money!</li>
+            </ul>
+            <p>The solution is then to <strong>reduce image size</strong>, which can be done in two ways:</p>
+            <ul>
+              <li>Decreasing the pixel size</li>
+              <li>Choosing the right file format</li>
+            </ul>
+            <p>In this example, I have reduced the image to <strong>500 pixels</strong> wide (this is 6 times smaller). The result is an image that weighs <strong>70 kilobytes</strong> (KB), which is <strong>15 times</strong> smaller, and therefore 15 times faster to load.</p>
+          </div>
+          <div class="col-md-6 col-xxl-5 py-3">
+            <h3 class="text-center color-blue">File formats</h3>
+            <p>The file format you&rsquo;ll use depends on the type of image you have.</p>
+            <h4>JPEG <em>(Joint Photography Expert Group)</em></h4>
+            <ul class="list-unstyled">
+              <li class="text-success">
+                <img src="images/common/check.svg" alt="good">
+                JPEG is the most appropriate format for photos
+              </li>
+              <li class="text-success">
+                <img src="images/common/check.svg" alt="good">
+                It uses a &ldquo;lossy&rdquo; compression algorithm that is very efficient at making photos smaller.
+              </li>
+              <li class="text-danger">
+                <img src="images/common/cross.svg" alt="bad">
+                The &ldquo;lossy&rdquo; compression will degrade the quality of your image, and this will be especially visible on geometric shapes.
+              </li>
+              <li class="text-danger">
+                <img src="images/common/cross.svg" alt="bad">
+                It shouldn&ldquo;t be used for images that contain logos, infographics, gradients and text.
+              </li>
+            </ul>
+            <h4>SVG <em>(Scalable Vector Graphics)</em></h4>
+            <ul class="list-unstyled">
+              <li class="text-success">
+                <img src="images/common/check.svg" alt="good">
+                SVG is a vector format, therefore the quality of an image is not dependent on its dimensions.
+              </li>
+              <li class="text-success">
+                <img src="images/common/check.svg" alt="good">
+                SVG files can be exported directly from Adobe Illustrator.
+              </li>
+              <li class="text-success">
+                <img src="images/common/check.svg" alt="good">
+                SVG can be used for logos, illustrations and infographics.
+              </li>
+              <li class="text-danger">
+                <img src="images/common/cross.svg" alt="bad">
+                However, it doesn&rsquo;t work very consistently with text.
+              </li>
+            </ul>
+            <h4>PNG <em>(Portable Network Graphics)</em></h4>
+            <ul class="list-unstyled">
+              <li class="text-success">
+                <img src="images/common/check.svg" alt="good">
+                PNG is a format that uses lossless compression: images retain their original quality. 
+              </li>
+              <li class="text-success">
+                <img src="images/common/check.svg" alt="good">
+                PNG is very performant can be used for logos, illustrations, geometric shapes, text and infographics.
+              </li>
+              <li class="text-success">
+                <img src="images/common/check.svg" alt="good">
+                Use PNG also when you have mixed content that doesn&rsquo;t necessarily work well with SVG or JPEG.
+              </li>
+              <li class="text-danger">
+                <img src="images/common/cross.svg" alt="bad">
+                The PNG compression is not very efficient with photos.
+              </li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-xxl-5 py-3 bg-lightorange">
+            <h3 class="text-center">Resizing images</h3>
+            <p>The easiest way of resizing images is to use the <strong>Crop</strong> tool in Photoshop. <a href="https://helpx.adobe.com/photoshop/using/crop-straighten-photos.html" target="_blank">Click here for a tutorial on this tool [adobe.com]</a>.</p>
+            <p>When the same image is used multiple times at different sizes for different purposes, it is recommended that you create separate copies. If you have pages with multiple images, such as a gallery, you should all resize them to the same size and aspect ratio.</p>
+            <p>The <strong>aspect ratio</strong> of an image is how wide is it versus how high it is. A square image has a 1:1 aspect ratio, a TV (at least the ones sold in the last 15 years) has a 16:9 aspect ratio.</p>
+            <figure>
+            <svg class="img-fluid d-block mx-auto" viewBox="0 0 520 340" width="520" height="340">
+              <defs>
+                <image href="images/part-2/portrait.jpg" id="img" width="240" height="320" />
+                <rect stroke="#ff0000" fill="none" stroke-width="4" width="120" height="120" x="60" y="20" id="f1" />
+                <rect stroke="#0000ff" fill="none" stroke-width="4" width="200" height="300" x="20" y="10" id="f2" />
+                <clipPath id="c1">
+                  <use href="#f1" />
+                </clipPath>
+                <clipPath id="c2">
+                  <use href="#f2" />
+                </clipPath>
+                <rect fill="rgba(255,255,255,.65)" stroke-width="4" width="90" height="80" x="-45" y="0" id="txtframe" />
+              </defs>
+              <g transform="translate(2,2)">
+                <use href="#img" />
+                <rect stroke="#00cc00" fill="none" stroke-width="4" width="240" height="320" x="0" y="0" />
+                <use href="#f1" />
+                <use href="#f2" />
+              </g>
+              <g transform="translate(240, -2) scale(.8)">
+                <use href="#img" clip-path="url(#c2)" />
+                <use href="#f2" />
+              </g>
+              <g transform="translate(335, 100)">
+                <use href="#img" clip-path="url(#c1)" />
+                <use href="#f1" />
+              </g>
+              <g transform="translate(270,255)">
+                <use href="#txtframe" stroke="#00cc00" />
+                <text text-anchor="middle" y="15">Original</text>
+                <text text-anchor="middle" y="40">W: 3000px</text>
+                <text text-anchor="middle" y="55">H: 4000px</text>
+                <text text-anchor="middle" y="70">ratio: 3:4</text>
+              </g>
+              <g transform="translate(370,255)">
+                <use href="#txtframe" stroke="#0000ff" />
+                <text text-anchor="middle" y="15">Portrait</text>
+                <text text-anchor="middle" y="40">W: 480px</text>
+                <text text-anchor="middle" y="55">H: 640px</text>
+                <text text-anchor="middle" y="70">ratio: 2:3</text>
+              </g>
+              <g transform="translate(470,255)">
+                <use href="#txtframe" stroke="#ff0000" />
+                <text text-anchor="middle" y="15">Thumbnail</text>
+                <text text-anchor="middle" y="40">W: 300px</text>
+                <text text-anchor="middle" y="55">H: 300px</text>
+                <text text-anchor="middle" y="70">ratio: 1:1</text>
+              </g>
+            </svg>
+            <figcaption class="fst-italic">The image above has been resized in two different versions: a portrait for use in a page about the subject, and a thumbnail to show within a gallery of photos.</figcaption>
+          </figure>
+          <p>You should resize your images based on <u>how big they will be on your web page</u>. This is something you can measure using your browser&rsquo;s developer tools. You can also use the dimensions of this page (see below).</p>
+          </div>
+          <div class="col-12">
+            <h3 class="text-center">How wide are elements on this page?</h3>
+            <p>Try resizing your browser window to see the numbers below change in real time!</p>
+          </div>
+          <div class="col-12 g-0 d-flex flex-row align-items-center pxcontainer">
+            <img src="images/part-2/arrowhead-left.svg" width="15" height="12" alt>
+            <hr class="w-100">
+            <div class="p-1 border border-dark bg-light rounded text-center lh-1">
+              full&nbsp;width:
+              <span class="pxnum">000</span>px
+            </div>
+            <hr class="w-100">
+            <img src="images/part-2/arrowhead-right.svg" width="15" height="12" alt>
+          </div>
+          <div class="col-6 g-0 d-flex flex-row align-items-center pxcontainer mb-2">
+            <img src="images/part-2/arrowhead-left.svg" width="15" height="12" alt>
+            <hr class="w-100">
+            <div class="p-1 border border-dark bg-light rounded text-center lh-1">
+              half&nbsp;width:
+              <span class="pxnum">000</span>px
+            </div>
+            <hr class="w-100">
+            <img src="images/part-2/arrowhead-right.svg" width="15" height="12" alt>
+          </div>
+          <div class="col-4 g-0 d-flex flex-row align-items-center pxcontainer mb-2">
+            <img src="images/part-2/arrowhead-left.svg" width="15" height="12" alt>
+            <hr class="w-100">
+            <div class="p-1 border border-dark bg-light rounded text-center lh-1">
+              1/3
+              <span class="pxnum">000</span>px
+            </div>
+            <hr class="w-100">
+            <img src="images/part-2/arrowhead-right.svg" width="15" height="12" alt>
+          </div>
+          <div class="col-2 g-0 d-flex flex-row align-items-center pxcontainer mb-2">
+            <img src="images/part-2/arrowhead-left.svg" width="15" height="12" alt>
+            <hr class="w-100">
+            <div class="p-1 border border-dark bg-light rounded text-center lh-1">
+              1/6
+              <span class="pxnum">000</span>px
+            </div>
+            <hr class="w-100">
+            <img src="images/part-2/arrowhead-right.svg" width="15" height="12" alt>
+          </div>
+          <div class="col-md-6 col-xxl-5 py-3">
+            <h3 class="text-center color-buas">Check images before publishing</h3>
+            <p>Please check the file size of all your images before publishing! Note that there is no strict guideline on how big an image should be, because it depends on the whole page.</p>
+            <p>For example, you could have 2 large images of 500KB each, or 50 small images of 20KB each, and reach a total size of 1 megabyte, which is a reasonable total size.</p>
+            <p>I have developed an <a href="https://raphv.github.io/image-checker/" target="_blank">image checker</a> that you can use to check the properties of your image files before publishing them.</p>
+          </div>
+          <div class="col-md-6 col-xxl-5 py-3 bg-lightblue">
+            <h3 class="text-center">Keep good file management practices</h3>
+            <p>The recommendations from the <a href="#avoid_errors">section above</a> are still valid: Your images should all be in the <strong>images</strong> folder, their names should be <strong>lowercase only</strong>, with no spaces or special characters.</p>
+            <p>If you have many images (more than 20), consider using sub-folders to make it easier to find them.</p>
+          </div>
+
+        </article>
+        <footer class="row bg-gray">
+          <div class="col-12 mt-3 mb-4 d-flex flex-wrap justify-content-evenly">
+            <a class="btn btn-outline-secondary m-1" href="#part_2">↑ Back to the top of Part 2</a>
+            <a class="btn btn-outline-secondary m-1" href="#manage_images">↑ Back to the top of &ldquo;Manage images&rdquo;</a>
+          </div>
+        </footer>
+      </section>
+
     </main>
     <script>
       document.getElementById('number-of-div').textContent = document.querySelectorAll('div').length;
       console.log("You've found the developer tools, congratulations!");
+      function updatePxContainers() {
+        Array.from(document.querySelectorAll('div.pxcontainer'), function(e) {
+          let w = Math.floor(e.clientWidth);
+          e.querySelector('span.pxnum').textContent = w;
+        });
+      }
+      updatePxContainers();
+      window.addEventListener('resize', updatePxContainers);
     </script>
   </body>
 </html>
