links to part 2

--- a/index.html
+++ b/index.html
@@ -61,7 +61,28 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="#">Edit the content of your page</a>
+              <a class="dropdown-item" href="part-2.html">Edit the content of your page</a>
+            </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#overview_goals"><span class="badge rounded-pill bg-buas">2.1</span> Overview & goals</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#html_tags"><span class="badge rounded-pill bg-buas">2.2</span> Common HTML Elements</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#dev_tools"><span class="badge rounded-pill bg-buas">2.3</span> Use developer tools</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#avoid_errors"><span class="badge rounded-pill bg-buas">2.4</span> Avoid errors</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#link"><span class="badge rounded-pill bg-buas">2.5</span> Link to images and pages</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#manage_images"><span class="badge rounded-pill bg-buas">2.6</span> Manage images</a>
             </li>
           </ul>
         </li>
@@ -117,6 +138,9 @@
             <li>
               <a class="btn btn-danger fs-4 m-2" href="part-1.html"><span class="badge text-danger rounded-pill bg-white">Part 1</span> Publish your first page</a>
             </li>
+            <li>
+              <a class="btn btn-danger fs-4 m-2" href="part-2.html"><span class="badge text-danger rounded-pill bg-white">Part 2</span> Edit the contents of your page</a>
+            </li>
           </ul>
         </div>
       </section>
@@ -166,6 +190,56 @@
               </li>
               <li>
                 <a href="part-1.html#editing_publishing">Editing and publishing</a>
+              </li>
+            </ol>
+          </div>
+        </article>
+      </section>
+
+      <section id="p_2">
+        <header class="section-header justify-content-center text-light bg-gradient py-5 row">
+          <div class="col-xxl-10">
+            <h2 class="display-3 fw-bolder lh-1 mb-4">
+              
+                <a href="part-1.html" class="badge rounded-pill bg-buas text-decoration-none">Part 2</a>
+                <a href="part-1.html" class="text-light">Edit the contents of your page</a>
+              
+            </h2>
+          </div>
+        </header>
+        <article class="row justify-content-center">
+          <div class="col-md-6 col-xxl-5 py-3">
+            <h3 class="color-buas text-center">Objectives</h3>
+            <h5>
+              <img class="me-1" src="images/common/trophy.svg" width="16" alt="trophy icon">
+              At the end of this part, you will be able to:
+            </h5>
+            <ul>
+              <li>Modify, add and remove content to an HTML page.</li>
+              <li>Check the validity of your HTML code and fix it if needed.</li>
+              <li>Edit, modify and organize images to optimize them for a website.</li>
+            </ul>
+          </div>
+          <div class="col-md-6 col-xxl-5 py-3 bg-lightblue">
+            <h3 class="color-blue text-center">Contents</h3>
+            <ol>
+              <li>
+                <a href="part-2.html#overview_goals">Overview & goals</a>
+              </li>
+              <li>
+                <a href="part-2.html#html_tags">Common HTML Elements</a>
+              </li>
+              <li>
+                <a href="part-2.html#dev_tools">Use developer tools</a>
+              </li>
+              <li>
+                <a href="part-2.html#avoid_errors">Avoid errors</a>
+              </li>
+              <li>
+                <a href="part-2.html#link"> Link to images and pages</a>
+              </li>
+              <li>
+                <a href="part-2.html#manage_images">Manage images</a>
               </li>
             </ol>
           </div>
