--- a/part-1.html
+++ b/part-1.html
@@ -63,7 +63,28 @@
           </a>
           <ul class="dropdown-menu">
             <li>
-              <a class="dropdown-item" href="#">Edit the content of your page</a>
+              <a class="dropdown-item" href="part-2.html">Edit the content of your page</a>
+            </li>
+            <li>
+              <hr class="dropdown-divider">
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#overview_goals"><span class="badge rounded-pill bg-buas">2.1</span> Overview & goals</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#html_tags"><span class="badge rounded-pill bg-buas">2.2</span> Common HTML Elements</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#dev_tools"><span class="badge rounded-pill bg-buas">2.3</span> Use developer tools</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#avoid_errors"><span class="badge rounded-pill bg-buas">2.4</span> Avoid errors</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#link"><span class="badge rounded-pill bg-buas">2.5</span> Link to images and pages</a>
+            </li>
+            <li>
+              <a class="dropdown-item" href="part-2.html#manage_images"><span class="badge rounded-pill bg-buas">2.6</span> Manage images</a>
             </li>
           </ul>
         </li>
