--- a/part-2.html
+++ b/part-2.html
@@ -1090,7 +1090,7 @@
             <h2 class="bg-buas rounded-pill display-6 fw-bold py-1 px-2 d-inline-block">2.4</h2>
           </div>
           <div class="col-10 col-md-5">
-            <h2 class="display-3 fw-bolder lh-1 mb-4">Link to images and pages</h2>
+            <h2 class="display-3 fw-bolder lh-1 mb-4">Manage images</h2>
           </div>
           <div class="col-md-6">
             <h5>
