Updated missing link

--- a/part-2.html
+++ b/part-2.html
@@ -188,7 +188,7 @@
               <li>If you want to see how other pages use HTML tags, check out your browser&rsquo;s <a href="#dev_tools">developer tools</a>.</li>
               <li>We are all humans, and typos happen when writing HTML code. Learn how to <a href="#avoid_errors">recognize, find and fix them</a> by keeping a good HTML structure and a good folder structure.</li>
               <li>You then learn how to <a href="#link">use hyperlinks</a> to direct your visitors to other sites or to show images.</li>
-              <li>These images will be hosted in your repository alongside your HTML code. <a href="#">The final section</a> teaches you the best practices for resizing and delivering images.</li>
+              <li>These images will be hosted in your repository alongside your HTML code. <a href="#manage_images">The final section</a> teaches you the best practices for resizing and delivering images.</li>
             </ul>
           </div>
           <div class="col-md-6 col-xxl-5 py-3 bg-lightblue">
